--- a/DayByDay.Tests/DayByDay.Tests.csproj
+++ b/DayByDay.Tests/DayByDay.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Test.Sdk">
+<Project Sdk="Microsoft.NET.Test.Sdk/17.9.0">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
