--- a/DayByDay.Tests/DayByDay.Tests.csproj
+++ b/DayByDay.Tests/DayByDay.Tests.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Test.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.0" />
   </ItemGroup>
